--- a/FuzzyPaws2/Views/PetType/Create.cshtml
+++ b/FuzzyPaws2/Views/PetType/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model CreateTypeViewModel
 
 <form method="post">
+    <input asp-for="Id" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
