--- a/FuzzyPaws2/Views/PetType/Delete.cshtml
+++ b/FuzzyPaws2/Views/PetType/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CreateTypeViewModel
 
-<form method="post" asp-action="DeletePetTypeFromDb">
-@*<input asp-for="Id" hidden/>*@    
+<form method="post" asp-action="Delete">
+<input asp-for="Id" hidden/>    
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
