--- a/FuzzyPaws2/Views/Pet/Details.cshtml
+++ b/FuzzyPaws2/Views/Pet/Details.cshtml
@@ -21,6 +21,14 @@
 
  <br />
 
+ <a asp-controller="Pet" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary mx-2">
+                        <i class="bi bi-pen"></i>
+                        Edit
+                    </a>
+<a asp-controller="Pet" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
+                        <i class="bi bi-trash3"></i>
+                        Delete
+                    </a> &nbsp;
     <a asp-controller="Pet" asp-action="Index" class="btn btn-secondary" style="width:250px">
     Go back to the list of pets...
     </a>
