--- a/FuzzyPaws2/Views/Pet/Index.cshtml
+++ b/FuzzyPaws2/Views/Pet/Index.cshtml
@@ -24,20 +24,22 @@
 @foreach(var pet in Model.AllPets)
 {            
     <div class="card col-4 pb-2 pt-2">
-        <img class="card-img-top" src="https://d2rd7etdn93tqb.cloudfront.net/wp-content/uploads/2020/09/instagram-thechowcalledziggy-chow-chow-dog.jpg" alt="Card image cap">
+        <a asp-controller="Pet" asp-action="Details" asp-route-id="@pet.Id">
+            <img class="card-img-top" src="https://d2rd7etdn93tqb.cloudfront.net/wp-content/uploads/2020/09/instagram-thechowcalledziggy-chow-chow-dog.jpg" alt="Card image cap">  
+        </a>
             <div class="card-body">
                 <a asp-controller="Pet" asp-action="Details" asp-route-id="@pet.Id">
                 <h5 class="card-title">@pet.Name</h5>
                 </a>
                
                 <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Pet" asp-action="Edit" asp-route-id="@pet.Id"
+                        @*<a asp-controller="Pet" asp-action="Edit" asp-route-id="@pet.Id"
                         class="btn btn-primary mx-2">
                         <i class="bi bi-pen"></i>
                         Edit</a>
                          <a asp-controller="Pet" asp-action="Delete" asp-route-id="@pet.Id" class="btn btn-danger"> 
                         <i class="bi bi-trash3"></i>
-                        Delete</a>         
+                        Delete</a>*@       
                  </div>
             </div>
     </div>
