identity i tako to

--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-controller="Home" asp-action="Contact">Contact us</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-controller="User" asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
+                        </li>
                         <li class="nav-item ms-auto">
                             <partial name="_LoginPartial" />
                         </li>
