--- a/FuzzyPaws2/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/FuzzyPaws2/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using FuzzyPaws2.Areas.Identity
 @using FuzzyPaws2.Areas.Identity.Pages
+@using FuzzyPaws2.Areas.Identity.Pages.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
