--- a/FuzzyPaws2/Views/_ViewImports.cshtml
+++ b/FuzzyPaws2/Views/_ViewImports.cshtml
@@ -3,4 +3,7 @@
 @using FuzzyPaws2.ViewModels.Pets
 @using FuzzyPaws2.ViewModels.PetTypes
 @using FuzzyPaws2.ViewModels.PetBreeds
+@using FuzzyPaws2.ViewModels.Users
+@using FuzzyPaws2.ViewModels.Roles
+@using FuzzyPaws2.Areas.Identity.Pages.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
