--- a/FuzzyPaws2/Views/Pet/Details.cshtml
+++ b/FuzzyPaws2/Views/Pet/Details.cshtml
@@ -2,15 +2,22 @@
 
 <br />
 <div class="row">
-    <div class="col-8">
+    <div class="col-5">
         <img class="w-100" src="https://d2rd7etdn93tqb.cloudfront.net/wp-content/uploads/2020/09/instagram-thechowcalledziggy-chow-chow-dog.jpg" alt="Card image cap">
             </div>
                 <div class="col">
                     <div class = "align-items-center">
-                        <h5 class="card-title">@Model.Name</h5>
-               
-                        <p class="card-text">@Model.PetTypeName</p>
-                        <p class="card-text">@Model.PetBreedName</p>
+                        <h3 class="card-title">@Model.Name</h3>
+                        <hr />
+                        <h5 class="card-text">@Model.PetTypeName
+                        <a asp-controller="PetType" asp-action="Details" asp-route-id="@Model.PetTypeId">
+                        <i class="bi bi-question-circle-fill"></i>
+                        </a> </h5>
+                        <h5 class="card-text">@Model.PetBreedName
+                        <a asp-controller="PetBreed" asp-action="Details" asp-route-id="@Model.PetBreedId">
+                        <i class="bi bi-question-circle-fill"></i>
+                        </a> </h5>
+                        <br />
                         <p class="card-text">@Model.Description</p>
                         <p>Cijena: @Model.Price KM</p>
                         <p>Prodano: @Model.IsSold</p>
