--- a/FuzzyPaws2/Views/PetBreed/Index.cshtml
+++ b/FuzzyPaws2/Views/PetBreed/Index.cshtml
@@ -24,9 +24,14 @@
 @foreach(var breed in Model.AllBreedsOfPets)
 {            
     <div class="card col-4 pb-2 pt-2">
+        <a asp-controller="PetBreed" asp-action="Details" asp-route-id="@breed.Id">
+            <img class="card-img-top" src="~/images/breed-type.jpg" alt="Card image cap">  
+        </a>
             <div class="card-body">
+                <a asp-controller="PetBreed" asp-action="Details" asp-route-id="@breed.Id">
                 <h5 class="card-title">@breed.Name</h5>
-                <p class="card-text">@breed.Description</p>
+                </a>
+               @* <p class="card-text">@breed.Description</p>
                
                 <div class="w-75 btn-group" role="group">
                         <a asp-controller="PetBreed" asp-action="Edit" asp-route-id="@breed.Id"
@@ -36,7 +41,7 @@
                          <a asp-controller="PetBreed" asp-action="Delete" asp-route-id="@breed.Id" class="btn btn-danger"> 
                         <i class="bi bi-trash3"></i>
                         Delete</a>         
-                 </div>
+                 </div>*@
             </div>
     </div>
  }
