--- a/FuzzyPaws2/Views/PetType/Index.cshtml
+++ b/FuzzyPaws2/Views/PetType/Index.cshtml
@@ -23,9 +23,14 @@
 @foreach(var type in Model.AllTypesOfPets)
 {            
     <div class="card col-4 pb-2 pt-2">
+        <a asp-controller="PetType" asp-action="Details" asp-route-id="@type.Id">
+            <img class="card-img-top" src="~/images/breed-type.jpg" alt="Card image cap">  
+        </a>
             <div class="card-body">
+                <a asp-controller="PetType" asp-action="Details" asp-route-id="@type.Id">
                 <h5 class="card-title">@type.Name</h5>
-                <p class="card-text">@type.Description</p>
+                </a>
+                @*<p class="card-text">@type.Description</p>
                
                 <div class="w-75 btn-group" role="group">
                         <a asp-controller="PetType" asp-action="Edit" asp-route-id="@type.Id"
@@ -35,7 +40,7 @@
                          <a asp-controller="PetType" asp-action="Delete" asp-route-id="@type.Id" class="btn btn-danger"> 
                         <i class="bi bi-trash3"></i>
                         Delete</a>         
-                 </div>
+                 </div>*@
             </div>
     </div>
  }
