--- a/FuzzyPaws2/Views/Role/Index.cshtml
+++ b/FuzzyPaws2/Views/Role/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
+﻿@model RoleIndexViewModel
 @{
     ViewData["Title"] = "Index";
 }
@@ -13,7 +13,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var role in Model)
+        @foreach (var role in Model.AllRoles)
         {
             <tr>
                 <td>@role.Id</td>
@@ -22,4 +22,4 @@
 
         }
     </tbody>
-</table>*@
+</table>
