--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -23,19 +23,19 @@
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="Pet" asp-action="Index">All Pets</a>
+                            <a class="nav-link text-light" asp-controller="Pet" asp-action="Index">Pets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="PetType" asp-action="Index">Pet Types</a>
+                            <a class="nav-link text-light" asp-controller="PetType" asp-action="Index">Types</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="PetBreed" asp-action="Index">Pet Breeds</a>
+                            <a class="nav-link text-light" asp-controller="PetBreed" asp-action="Index">Breeds</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="Product" asp-action="Index">Pet products</a>
+                            <a class="nav-link text-light" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="Home" asp-action="Contact">Contact us</a>
+                            <a class="nav-link text-light" asp-controller="Home" asp-action="Contact">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-controller="User" asp-action="Index">Users</a>
