slike i prikaz detalja za breed i type na pet listi

--- a/FuzzyPaws2/Views/PetType/Index.cshtml
+++ b/FuzzyPaws2/Views/PetType/Index.cshtml
@@ -24,7 +24,7 @@
 {            
     <div class="card col-4 pb-2 pt-2">
         <a asp-controller="PetType" asp-action="Details" asp-route-id="@type.Id">
-            <img class="card-img-top" src="~/images/breed-type.jpg" alt="Card image cap">  
+            <img class="card-img-top" src="~/images/type.jpg" alt="Card image cap">  
         </a>
             <div class="card-body">
                 <a asp-controller="PetType" asp-action="Details" asp-route-id="@type.Id">
