--- a/FuzzyPaws2/Views/PetBreed/Details.cshtml
+++ b/FuzzyPaws2/Views/PetBreed/Details.cshtml
@@ -3,7 +3,7 @@
 <br />
 <div class="row">
     <div class="col-4">
-        <img class="w-100" src="~/images/breed-type.jpg" alt="Card image cap">
+        <img class="w-100" src="~/images/breed.jpg" alt="Card image cap">
     </div>
                 <div class="col">
                     <div>
