--- a/FuzzyPaws2/Views/PetBreed/Index.cshtml
+++ b/FuzzyPaws2/Views/PetBreed/Index.cshtml
@@ -25,7 +25,7 @@
 {            
     <div class="card col-4 pb-2 pt-2">
         <a asp-controller="PetBreed" asp-action="Details" asp-route-id="@breed.Id">
-            <img class="card-img-top" src="~/images/breed-type.jpg" alt="Card image cap">  
+            <img class="card-img-top" src="~/images/breed.jpg" alt="Card image cap">  
         </a>
             <div class="card-body">
                 <a asp-controller="PetBreed" asp-action="Details" asp-route-id="@breed.Id">
