--- a/FuzzyPaws2/Views/User/Edit.cshtml
+++ b/FuzzyPaws2/Views/User/Edit.cshtml
@@ -1,33 +1,36 @@
 ﻿@model UserCreateViewModel
 
-<form method="post" asp-action="Delete">
+<form method="post" asp-action="Edit">
     <input asp-for="Id" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
-                Are you sure you want to delete  this user? <i class="bi bi-emoji-frown"></i>
+                Edit pet description
             </h2>
             <hr />
         </div>
         @*<div asp-validation-summary="All"></div>*@
         <div class="mb-3">
             <label asp-for="UserName"></label>
-            <input asp-for="UserName" disabled class="form-control"/>
+            <input asp-for="UserName" class="form-control"/>
+            <span asp-validation-for="UserName" class="text-danger"></span>
         </div>
-         <div class="mb-3">
+        <div class="mb-3">
             <label asp-for="Email"></label>
-            <input asp-for="Email" disabled class="form-control"/>
+            <input asp-for="Email" class="form-control"/>
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-         <div class="mb-3">
+        <div class="mb-3">
             <label asp-for="PhoneNumber"></label>
-            <input asp-for="PhoneNumber" disabled class="form-control"/>
+            <input asp-for="PhoneNumber" class="form-control"/>
+            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
         </div>
         
-        <button type="submit" class="btn btn-danger" style="width:150px">
-            Delete
+        <button type="submit" class="btn btn-primary" style="width:150px">
+            Update
         </button>
         <a asp-controller="User" asp-action="Index" class="btn btn-secondary" style="width:250px">
-            List of users
+            List of all users
         </a>
     </div>
 </form>
