--- a/FuzzyPaws2/Views/User/Index.cshtml
+++ b/FuzzyPaws2/Views/User/Index.cshtml
@@ -27,6 +27,7 @@
       <th scope="col"><i class="bi bi-person-square"></i></th>
       <th scope="col">Username</th>
       <th scope="col">Email</th>
+      <th scope="col">Phone Number</th>
       <th scope="col">Role</th>
       <th scope="col">Actions</th>
     </tr>
@@ -38,11 +39,17 @@
       <th scope="row"></th>
       <td>@user.UserName</td>
       <td>@user.Email</td>
+      <td>@user.PhoneNumber</td>
       <td>#</td>
       <td>
+          <a asp-controller="User" asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary"> 
+                        <i class="bi bi-person-check"></i>
+                        Edit
+                    </a>
           <a asp-controller="User" asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger"> 
                         <i class="bi bi-person-dash"></i>
-                        Delete</a>
+                        Delete
+                    </a>
       </td>
     </tr>
   </tbody>
