promjena teksta sa hrv na eng

--- a/FuzzyPaws2/Views/Pet/Details.cshtml
+++ b/FuzzyPaws2/Views/Pet/Details.cshtml
@@ -19,8 +19,8 @@
                         </a> </h5>
                         <br />
                         <p class="card-text">@Model.Description</p>
-                        <p>Cijena: @Model.Price KM</p>
-                        <p>Prodano: @Model.IsSold</p>
+                        <p>Price: @Model.Price $</p>
+                        <p>Sold: @Model.IsSold</p>
 
                     </div>
             </div>  
