--- a/FuzzyPaws2/Views/User/Delete.cshtml
+++ b/FuzzyPaws2/Views/User/Delete.cshtml
@@ -27,7 +27,7 @@
             Delete
         </button>
         <a asp-controller="User" asp-action="Index" class="btn btn-secondary" style="width:250px">
-            List of users
+            Go back to all users
         </a>
     </div>
 </form>
