--- a/FuzzyPaws2/Views/Pet/Details.cshtml
+++ b/FuzzyPaws2/Views/Pet/Details.cshtml
@@ -3,7 +3,7 @@
 <br />
 <div class="row">
     <div class="col-5">
-        <img class="w-100" src="https://d2rd7etdn93tqb.cloudfront.net/wp-content/uploads/2020/09/instagram-thechowcalledziggy-chow-chow-dog.jpg" alt="Card image cap">
+        <img class="w-100" src="~/images/chow.jpg" alt="Card image cap">
             </div>
                 <div class="col">
                     <div class = "align-items-center">
