prikaz rola i dodavanje user kao default

--- a/FuzzyPaws2/Views/PetType/Details.cshtml
+++ b/FuzzyPaws2/Views/PetType/Details.cshtml
@@ -3,7 +3,7 @@
 <br />
 <div class="row">
     <div class="col-4">
-        <img class="w-100" src="~/images/type.jpg" alt="Card image cap">
+        <img class="w-100" src="~/images/typee.jpg" alt="Card image cap">
             </div>
                 <div class="col">
                     <div class = "align-items-center">
