--- a/FuzzyPaws2/Views/Role/Index.cshtml
+++ b/FuzzyPaws2/Views/Role/Index.cshtml
@@ -4,12 +4,12 @@
 }
 
 <h1>List of Roles</h1>
-<a asp-action="Create">Create</a>
+<br /> <br />
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
-            <td>Id</td>
-            <td>Name</td>
+            <th>Id</th>
+            <th>Name</th>
         </tr>
     </thead>
     <tbody>
