--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -37,9 +37,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-controller="Home" asp-action="Contact">Contact</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="User" asp-action="Index">Users</a>
-                        </li>
+                                <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Users
+                                  </a>
+                                  <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Index">Admin</a></li>
+                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Vets">Vets</a></li>
+                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Users">Users</a></li>
+                                </ul>
+                                </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
                         </li>
