--- a/FuzzyPaws2/Views/User/DeleteVet.cshtml
+++ b/FuzzyPaws2/Views/User/DeleteVet.cshtml
@@ -1,11 +1,11 @@
 ﻿@model UserCreateViewModel
 
-<form method="post" asp-action="Delete">
+<form method="post" asp-action="DeleteVet">
     <input asp-for="Id" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
-                Are you sure you want to delete  this user? <i class="bi bi-emoji-frown"></i>
+                Are you sure you want to delete  this vet? <i class="bi bi-emoji-frown"></i>
             </h2>
             <hr />
         </div>
@@ -26,8 +26,8 @@
         <button type="submit" class="btn btn-danger" style="width:150px">
             Delete
         </button>
-        <a asp-controller="User" asp-action="Users" class="btn btn-secondary" style="width:250px">
-            Go back to all users
+        <a asp-controller="User" asp-action="Vets" class="btn btn-secondary" style="width:250px">
+            Go back to vets
         </a>
     </div>
 </form>
