--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -42,9 +42,9 @@
                                     Users
                                   </a>
                                   <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Index">Admin</a></li>
-                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Vets">Vets</a></li>
-                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Users">Users</a></li>
+                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Admin">Admin</a></li>
+                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Vet">Vets</a></li>
+                                    <li><a class="dropdown-item" asp-controller="User" asp-action="User">Users</a></li>
                                 </ul>
                                 </li>
 
