--- a/FuzzyPaws2/Views/User/EditVet.cshtml
+++ b/FuzzyPaws2/Views/User/EditVet.cshtml
@@ -29,7 +29,7 @@
         <button type="submit" class="btn btn-primary" style="width:150px">
             Update
         </button>
-        <a asp-controller="User" asp-action="Vets" class="btn btn-secondary" style="width:250px">
+        <a asp-controller="User" asp-action="Vet" class="btn btn-secondary" style="width:250px">
             List of all vets
         </a>
     </div>
