--- a/FuzzyPaws2/Views/Role/Index.cshtml
+++ b/FuzzyPaws2/Views/Role/Index.cshtml
@@ -10,6 +10,7 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
+            <th>List</th>
         </tr>
     </thead>
     <tbody>
@@ -18,6 +19,7 @@
             <tr>
                 <td>@role.Id</td>
                 <td>@role.Name</td>
+                <td><a asp-controller="User" asp-action="@role.Name">Click here</a></td>
             </tr>
 
         }
