--- a/FuzzyPaws2/Views/User/Delete.cshtml
+++ b/FuzzyPaws2/Views/User/Delete.cshtml
@@ -26,7 +26,7 @@
         <button type="submit" class="btn btn-danger" style="width:150px">
             Delete
         </button>
-        <a asp-controller="User" asp-action="Users" class="btn btn-secondary" style="width:250px">
+        <a asp-controller="User" asp-action="User" class="btn btn-secondary" style="width:250px">
             Go back to all users
         </a>
     </div>
