--- a/FuzzyPaws2/Views/User/DeleteVet.cshtml
+++ b/FuzzyPaws2/Views/User/DeleteVet.cshtml
@@ -26,7 +26,7 @@
         <button type="submit" class="btn btn-danger" style="width:150px">
             Delete
         </button>
-        <a asp-controller="User" asp-action="Vets" class="btn btn-secondary" style="width:250px">
+        <a asp-controller="User" asp-action="Vet" class="btn btn-secondary" style="width:250px">
             Go back to vets
         </a>
     </div>
