--- a/FuzzyPaws2/Views/User/Edit.cshtml
+++ b/FuzzyPaws2/Views/User/Edit.cshtml
@@ -29,7 +29,7 @@
         <button type="submit" class="btn btn-primary" style="width:150px">
             Update
         </button>
-        <a asp-controller="User" asp-action="Users" class="btn btn-secondary" style="width:250px">
+        <a asp-controller="User" asp-action="User" class="btn btn-secondary" style="width:250px">
             List of all users
         </a>
     </div>
