napokon radi edit i delete za users

--- a/FuzzyPaws2/Views/User/User.cshtml
+++ b/FuzzyPaws2/Views/User/User.cshtml
@@ -40,7 +40,7 @@
       <td>@user.Email</td>
       <td>@user.PhoneNumber</td>
       <td>
-          <a asp-controller="User" asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary"> 
+          <a asp-controller="User" asp-action="EditUser" asp-route-id="@user.Id" class="btn btn-primary"> 
                         <i class="bi bi-person-check"></i>
                         Edit
                     </a>
