--- a/FuzzyPaws2/Views/User/Vet.cshtml
+++ b/FuzzyPaws2/Views/User/Vet.cshtml
@@ -36,11 +36,11 @@
       <td>@user.Email</td>
       <td>@user.PhoneNumber</td>
       <td>
-          <a asp-controller="User" asp-action="EditVet" asp-route-id="@user.Id" class="btn btn-primary"> 
+          <a asp-controller="User" asp-action="EditViewVet" asp-route-id="@user.Id" class="btn btn-primary"> 
                         <i class="bi bi-person-check"></i>
                         Edit
                     </a>
-          <a asp-controller="User" asp-action="DeleteVet" asp-route-id="@user.Id" class="btn btn-danger"> 
+          <a asp-controller="User" asp-action="DeleteViewVet" asp-route-id="@user.Id" class="btn btn-danger"> 
                         <i class="bi bi-person-dash"></i>
                         Delete
                     </a>
