--- a/FuzzyPaws2/Views/User/Delete.cshtml
+++ b/FuzzyPaws2/Views/User/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UserCreateViewModel
 
-<form method="post" asp-action="Delete">
+<form method="post" asp-action="DeleteUser">
     <input asp-for="Id" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
