MyPet mvc added

--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -26,31 +26,45 @@
                             <a class="nav-link text-light" asp-controller="Pet" asp-action="Index">Pets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="PetType" asp-action="Index">Types</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="PetBreed" asp-action="Index">Breeds</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-light" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-controller="Home" asp-action="Contact">Contact</a>
                         </li>
-                                <li class="nav-item dropdown">
-                                  <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Users
-                                  </a>
-                                  <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Admin">Admin</a></li>
-                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Vet">Vets</a></li>
-                                    <li><a class="dropdown-item" asp-controller="User" asp-action="User">Users</a></li>
+                        @*@if(User.IsInRole("ADMIN"))
+                        {*@
+                            <li  class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Administracija
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="User" asp-action="Admin">Admin</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="User" asp-action="Vet">Vets</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="User" asp-action="User">Users</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="PetType" asp-action="Index">Types</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="PetBreed" asp-action="Index">Breeds</a>
+                                    </li>
                                 </ul>
-                                </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
-                        </li>
+                         </li> 
+                        @*}*@
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-controller="MyPet" asp-action="Index">My Pets</a>
+                            </li>
+                        }
                         <li class="nav-item ms-auto">
                             <partial name="_LoginPartial" />
                         </li>
