--- a/FuzzyPaws2/Views/MyPet/Details.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Details.cshtml
@@ -1,9 +1,9 @@
-﻿@model PetDetailsViewModel
+﻿@model MyPetDetailsViewModel
 
 <br />
 <div class="row">
     <div class="col-5">
-        <img class="w-100" src="~/images/chow.jpg" alt="Card image cap">
+        <img class="w-100" src="~/images/maca.jpg" alt="Card image cap">
             </div>
                 <div class="col">
                     <div class = "align-items-center">
@@ -19,24 +19,23 @@
                         </a> </h5>
                         <br />
                         <p class="card-text">@Model.Description</p>
-                        <p>Price: @Model.Price $</p>
-                        <p>Sold: @Model.IsSold</p>
-
+                        <h6>Owner: @Model.UserName </h6>
                     </div>
             </div>  
  </div>
 
  <br />
 
- <a asp-controller="Pet" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary mx-2">
+<a asp-controller="MyPet" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary mx-2">
                         <i class="bi bi-pen"></i>
                         Edit
                     </a>
+                    @*
 <a asp-controller="Pet" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
                         <i class="bi bi-trash3"></i>
                         Delete
-                    </a> &nbsp;
-    <a asp-controller="Pet" asp-action="Index" class="btn btn-secondary" style="width:250px">
-    Go back to the list of pets...
+                    </a> &nbsp; *@
+    <a asp-controller="MyPet" asp-action="Index" class="btn btn-secondary">
+    All my pets
     </a>
-                    
+                 
