--- a/FuzzyPaws2/Views/_ViewImports.cshtml
+++ b/FuzzyPaws2/Views/_ViewImports.cshtml
@@ -5,5 +5,6 @@
 @using FuzzyPaws2.ViewModels.PetBreeds
 @using FuzzyPaws2.ViewModels.Users
 @using FuzzyPaws2.ViewModels.Roles
+@using FuzzyPaws2.ViewModels.MyPets
 @using FuzzyPaws2.Areas.Identity.Pages.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
