--- a/FuzzyPaws2/Views/Pet/Create.cshtml
+++ b/FuzzyPaws2/Views/Pet/Create.cshtml
@@ -44,7 +44,7 @@
             Create
         </button>
         <a asp-controller="Pet" asp-action="Index" class="btn btn-secondary" style="width:250px">
-            Go back to the list of pets...
+            Go back to the list of pets
         </a>
     </div>
 </form>
