--- a/FuzzyPaws2/Views/_ViewImports.cshtml
+++ b/FuzzyPaws2/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using FuzzyPaws2.ViewModels.Roles
 @using FuzzyPaws2.ViewModels.MyPets
 @using FuzzyPaws2.Areas.Identity.Pages.Account
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
