--- a/FuzzyPaws2/Views/MyPet/Create.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Create.cshtml
@@ -1,7 +1,12 @@
-﻿@model MyPetCreateViewModel
+﻿@using Microsoft.AspNetCore.Identity;
+
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+@model MyPetCreateViewModel
 
 <form asp-action="Create" method="post">
-    <input asp-for="Id" hidden/>
+    <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
@@ -30,9 +35,7 @@
 
         <div class="mb-3">
             @*Getting id of the authenticated user here ?*@
-            <label asp-for="UserId"></label>
-            <input asp-for="UserId" disabled class="form-control"/>
-            <span asp-validation-for="UserId" class="text-danger"></span>
+            <input asp-for="UserId" value="@UserManager.GetUserId(User)" hidden />
         </div>
 
         <div class="mb-3">
