--- a/FuzzyPaws2/Views/MyPet/Details.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Details.cshtml
@@ -30,11 +30,11 @@
                         <i class="bi bi-pen"></i>
                         Edit
                     </a>
-                    @*
-<a asp-controller="Pet" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
+                    
+<a asp-controller="MyPet" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
                         <i class="bi bi-trash3"></i>
                         Delete
-                    </a> &nbsp; *@
+                    </a> &nbsp; 
     <a asp-controller="MyPet" asp-action="Index" class="btn btn-secondary">
     All my pets
     </a>
