--- a/FuzzyPaws2/Views/MyPet/Index.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Index.cshtml
@@ -16,21 +16,37 @@
     </div>
 </div>
 
-<div class="row">
- @foreach(var pet in Model.MyPets) {
-    <div class="card mb-3 me-2" style="max-width: 500px;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img src="~/images/maca.jpg" class="img-fluid rounded-start pt-1 pb-1 alt="...">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">@pet.Name</h5>
-            <p class="card-text">@pet.Description</p>
-            <p><a asp-controller="MyPet" asp-action="Details" asp-route-id="@pet.Id">More about my pet</a></p>
-          </div>
-        </div>
-      </div>
+@if(Model.MyPets.Count() == 0)
+{
+    <br /><br />
+    <div class="text-center">
+    <h1 class="text-primary">You don't have any pets yet, 
+        <a asp-controller="MyPet" asp-action="Create">
+        add</a> one now!</h1>
+    <br />
+    <img src="~/images/no-data-cat.png" class="img-fluid w-50"/>
     </div>
- }
-</div>
+} 
+else
+{
+    <div class="row">
+         @foreach(var pet in Model.MyPets) {
+            <div class="card mb-3 me-2" style="max-width: 500px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="~/images/maca.jpg" class="img-fluid rounded-start pt-1 pb-1 alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">@pet.Name</h5>
+                    <p class="card-text">@pet.Description</p>
+                    <p><a asp-controller="MyPet" asp-action="Details" asp-route-id="@pet.Id">
+                        More about this pet
+                        </a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+         }
+    </div>
+}
