--- a/FuzzyPaws2/Views/Pet/Details.cshtml
+++ b/FuzzyPaws2/Views/Pet/Details.cshtml
@@ -20,23 +20,36 @@
                         <br />
                         <p class="card-text">@Model.Description</p>
                         <p>Price: @Model.Price $</p>
-                        <p>Sold: @Model.IsSold</p>
+                        @if (Model.IsSold.Equals(true))
+                        {
+                            <h6 class="text text-danger">Status: @(Model.IsSold ? "Sold":"Available")</h6>
+                        }
 
-                    </div>
+                        else{
+                           <h6 class="text text-success">Status: @(Model.IsSold ? "Sold":"Available")</h6>
+
+                        }
+        </div>
             </div>  
  </div>
 
  <br />
 
- <a asp-controller="Pet" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary mx-2">
+@if(User.IsInRole("Admin"))
+{
+        <a asp-controller="Pet" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary mx-2">
                         <i class="bi bi-pen"></i>
                         Edit
                     </a>
-<a asp-controller="Pet" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
+        <a asp-controller="Pet" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
                         <i class="bi bi-trash3"></i>
                         Delete
-                    </a> &nbsp;
+                    </a>
+} &nbsp;&nbsp;&nbsp;
+    <a asp-controller="Pet" asp-action="Buy" asp-route-id="@Model.Id" class="btn btn-success">
+        Buy this pet
+    </a>
     <a asp-controller="Pet" asp-action="Index" class="btn btn-secondary" style="width:250px">
-    Go back to the list of pets...
+    Go back to the list of pets
     </a>
                     
