--- a/FuzzyPaws2/Views/Pet/Delete.cshtml
+++ b/FuzzyPaws2/Views/Pet/Delete.cshtml
@@ -30,6 +30,9 @@
             <label asp-for="Price"></label>
             <input asp-for="Price" disabled class="form-control"/>
         </div>
+@*        <dd class="col-sm-10">
+            <img src="@FileLocation.RetriveFileFromFolder@Model.ExistingImage" class="img-thumbnail" height="100" width="100" asp-append-version="true" />
+        </dd>*@
         <button type="submit" class="btn btn-danger" style="width:150px">
             Delete
         </button>
