--- a/FuzzyPaws2/Views/PetType/Create.cshtml
+++ b/FuzzyPaws2/Views/PetType/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CreateTypeViewModel
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     <input asp-for="Id" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
@@ -19,6 +19,15 @@
             <label asp-for="Description"></label>
             <input asp-for="Description" class="form-control"/>  
             <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <div class="form-group">
+                <label asp-for="Picture" class="control-label"></label>
+                <div class="custom-file">
+                     <input asp-for="Picture" class="custom-file-input" />
+                </div>
+                <span asp-validation-for="Picture" class="text-danger"></span>
+             </div>
         </div>
         <button type="submit" class="btn btn-primary" style="width:150px">
             Create
