--- a/FuzzyPaws2/Views/MyPet/Create.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Create.cshtml
@@ -5,7 +5,7 @@
 
 @model MyPetCreateViewModel
 
-<form asp-action="Create" method="post">
+<form asp-action="Create" method="post" enctype="multipart/form-data">
     <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
@@ -43,6 +43,16 @@
             <input asp-for="Description" class="form-control"/>  
             <span asp-validation-for="Description" class="text-danger"></span>
 
+        </div>
+
+        <div class="mb-3">
+            <div class="form-group">
+                <label asp-for="Picture" class="control-label"></label>
+                <div class="custom-file">
+                     <input asp-for="Picture" class="custom-file-input" />
+                </div>
+                <span asp-validation-for="Picture" class="text-danger"></span>
+             </div>
         </div>
         
         <button type="submit" class="btn btn-primary" style="width:150px">
