--- a/FuzzyPaws2/Views/MyPet/Details.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Details.cshtml
@@ -3,11 +3,13 @@
 <br />
 <div class="row">
     <div class="col-5">
-        <img class="w-100" src="~/images/maca.jpg" alt="Card image cap">
+        <img class="w-100" 
+        src="@FileLocation.RetriveFileFromFolder@Model.Image" class="img-thumbnail"  asp-append-version="true"
+        alt="Card image cap">
             </div>
                 <div class="col">
                     <div class = "align-items-center">
-                        <h3 class="card-title">@Model.Name</h3>
+                        <h3 class="card-title text-primary">@Model.Name</h3>
                         <hr />
                         <h5 class="card-text">@Model.PetTypeName
                         <a asp-controller="PetType" asp-action="Details" asp-route-id="@Model.PetTypeId">
@@ -19,7 +21,7 @@
                         </a> </h5>
                         <br />
                         <p class="card-text">@Model.Description</p>
-                        <h6>Owner: @Model.UserName </h6>
+                        <h6 class="text text-success">Owner: @Model.UserName </h6>
                     </div>
             </div>  
  </div>
