--- a/FuzzyPaws2/Views/Pet/Create.cshtml
+++ b/FuzzyPaws2/Views/Pet/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PetCreateViewModel
 
-<form asp-action="Create" method="post">
-    <input asp-for="Id" hidden/>
+<form asp-action="Create" method="post" enctype="multipart/form-data">
+@*    <input asp-for="Id" hidden/> *@    
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
@@ -39,7 +39,17 @@
             <span asp-validation-for="Description" class="text-danger"></span>
 
         </div>
-        
+
+        <div class="mb-3">
+            <div class="form-group">
+                <label asp-for="Picture" class="control-label"></label>
+                <div class="custom-file">
+                     <input asp-for="Picture" class="custom-file-input" />
+                </div>
+                <span asp-validation-for="Picture" class="text-danger"></span>
+             </div>
+        </div>
+
         <button type="submit" class="btn btn-primary" style="width:150px">
             Create
         </button>
@@ -53,3 +63,4 @@
         <partial name="_ValidationScriptsPartial" /> 
     }
 }
+
