--- a/FuzzyPaws2/Views/PetBreed/Details.cshtml
+++ b/FuzzyPaws2/Views/PetBreed/Details.cshtml
@@ -3,7 +3,9 @@
 <br />
 <div class="row">
     <div class="col-4">
-        <img class="w-100" src="~/images/breed.jpg" alt="Card image cap">
+        <img class="w-100" 
+            src="@FileLocation.RetriveFileFromFolder@Model.Image" class="img-thumbnail"  asp-append-version="true"
+        alt="Card image cap">    
     </div>
                 <div class="col">
                     <div>
@@ -17,15 +19,17 @@
  </div>
 
  <br />
-
- <a asp-controller="PetBreed" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary mx-2">
-                        <i class="bi bi-pen"></i>
+@if (User.IsInRole("Admin"))
+{
+    <a asp-controller="PetBreed" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary mx-2">
+        <i class="bi bi-pen"></i>
                         Edit
                     </a>
-<a asp-controller="PetBreed" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
+    <a asp-controller="PetBreed" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
                         <i class="bi bi-trash3"></i>
                         Delete
-                    </a> &nbsp;
+                    </a>
+} &nbsp;
     <a asp-controller="PetBreed" asp-action="Index" class="btn btn-secondary" style="width:250px">
     List of all breeds
     </a>
