--- a/FuzzyPaws2/Views/PetBreed/Edit.cshtml
+++ b/FuzzyPaws2/Views/PetBreed/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CreateBreedViewModel
 
-<form method="post" asp-action="Edit">
+<form method="post" asp-action="Edit" enctype="multipart/form-data">
     <input asp-for="Id" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
@@ -20,6 +20,15 @@
             <input asp-for="Description" class="form-control"/>  
             <span asp-validation-for="Description" class="text-danger"></span>
 
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Picture" class="control-label"></label>
+            <div class="custom-file">
+                 <input asp-for="Picture" class="custom-file-input" />
+            </div>
+            <span asp-validation-for="Picture" class="text-danger"></span>
+            <img src="@FileLocation.RetriveFileFromFolder@Model.ExistingImage" class="img-thumbnail" height="100" width="100" asp-append-version="true" />
         </div>
         
         <button type="submit" class="btn btn-primary" style="width:150px">
