--- a/FuzzyPaws2/Views/PetType/Index.cshtml
+++ b/FuzzyPaws2/Views/PetType/Index.cshtml
@@ -10,12 +10,15 @@
                 List of pet types <img src="~/images/dog-icon.png" style="height50px;width:50px"/>
             </h2>
         </div>
-        <div class="col-6 text-end">
-            <a asp-controller="PetType" asp-action="Create" class="btn btn-primary"> 
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="col-6 text-end">
+                <a asp-controller="PetType" asp-action="Create" class="btn btn-primary"> 
                 <i class="bi bi-plus-circle"></i>
                 Add new type of pets
              </a>
         </div>
+        }
     </div>
 </div>
 
@@ -24,7 +27,7 @@
 {            
     <div class="card col-3 pb-2 pt-2">
         <a asp-controller="PetType" asp-action="Details" asp-route-id="@type.Id">
-            <img class="card-img-top" src="~/images/typee.jpg" alt="Card image cap">  
+            <img class="card-img-top" height="100%" width="100" style="min-height:280px" src="@FileLocation.RetriveFileFromFolder@type.Image" asp-append-version="true" alt="Card image cap" />  
         </a>
             <div class="card-body">
                 <a asp-controller="PetType" asp-action="Details" asp-route-id="@type.Id">
