--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                             <a class="nav-link text-light" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-light" asp-controller="Appointment" asp-action="Index">Appointments</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-light" asp-controller="Home" asp-action="Contact">Contact</a>
                         </li>
                         @if(User.IsInRole("Admin"))
