--- a/FuzzyPaws2/Views/_ViewImports.cshtml
+++ b/FuzzyPaws2/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using FuzzyPaws2.ViewModels.Users
 @using FuzzyPaws2.ViewModels.Roles
 @using FuzzyPaws2.ViewModels.MyPets
+@using FuzzyPaws2.ViewModels.Images
 @using FuzzyPaws2.Areas.Identity.Pages.Account
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
