--- a/FuzzyPaws2/Views/MyPet/Details.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Details.cshtml
@@ -1,4 +1,9 @@
-﻿@model MyPetDetailsViewModel
+﻿@using Microsoft.AspNetCore.Identity;
+
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+@model MyPetDetailsViewModel
 
 <br />
 <div class="row">
@@ -27,17 +32,19 @@
  </div>
 
  <br />
-
-<a asp-controller="MyPet" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary mx-2">
-                        <i class="bi bi-pen"></i>
-                        Edit
-                    </a>
-                    
-<a asp-controller="MyPet" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
-                        <i class="bi bi-trash3"></i>
-                        Delete
-                    </a> &nbsp; 
-    <a asp-controller="MyPet" asp-action="Index" class="btn btn-secondary">
-    All my pets
+@if (@UserManager.GetUserId(User).Equals(@Model.UserId))
+{
+    <a asp-controller="MyPet" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary mx-2">
+        <i class="bi bi-pen"></i>
+        Edit
     </a>
-                 
+
+    <a asp-controller="MyPet" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger"> 
+        <i class="bi bi-trash3"></i>
+        Delete
+    </a>
+
+    <a asp-controller="MyPet" asp-action="Index" class="btn btn-secondary">
+        All my pets
+    </a>
+}
