--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         {
                             <li  class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Administracija
+                                    Administration
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item">
