--- a/FuzzyPaws2/Views/_ViewImports.cshtml
+++ b/FuzzyPaws2/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using FuzzyPaws2.ViewModels.Roles
 @using FuzzyPaws2.ViewModels.MyPets
 @using FuzzyPaws2.ViewModels.Images
+@using FuzzyPaws2.ViewModels.Appointments
 @using FuzzyPaws2.Areas.Identity.Pages.Account
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
